# hawkwm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: appmenu.h  composistor.h  compositor.h  transpiler.h  window.h
src/: CMakeLists.txt  appmenu.cpp  composistor.cpp  compositor.cpp  main.cpp  transpiler.cpp  window.cpp
